--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ version = "0.1.0"
 [dependencies]
 log = "0.4"
 serde = "1"
-reqwest = { version = "0.12", features = ["json"] }
 yew = { version = "0.21", features = ["csr"] }
 yew-router = "0.18"
 yew-hooks = "0.3"
@@ -22,6 +21,7 @@ wasm-bindgen = "0.2"
 wasm-logger = "0.2"
 gloo-utils = "0.2"
 gloo-timers = "0.3"
+gloo-net = "0.2"
 web-sys = { version = "0.3", features = [
     "Navigator", 
     "Clipboard", 
